# media-platform

./: .env.sample  .gitignore  README.md  database.db  pyproject.toml
backend/: .env.sample  .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/database/postgres/data/: postmaster.pid
backend/database/postgres/data/base/1/: pg_internal.init
backend/database/postgres/data/base/16384/: 1247  1249  1259  2579  2606  2608  2610  2620  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455
backend/database/postgres/data/base/5/: pg_internal.init
backend/database/postgres/data/global/: 1260  1262  2671  pg_control  pg_internal.init
backend/etc/compose/: Dockerfile  compose.yaml
backend/etc/docker/: compose.yaml
backend/etc/docker/api/v0/: Dockerfile  compose.yaml
backend/etc/docker/postgres/: compose.yaml
backend/etc/docker/rabbitmq/: compose.yaml
backend/media_platform/backoffice/contexts/shared/domain/: __init__.py  entity_id.py  image.py
backend/migrations/: env.py
backend/migrations/backoffice/versions/: 6971b41ab152_initial_alembic.py
backend/migrations/contexts/backoffice/: env.py
backend/migrations/contexts/backoffice/versions/: 887de3ffb5e1_initial_alembic.py  98fac2f84a20_initial_alembic.py  bb0cccea3ff9_initial_alembic.py  bb364c7ec5cb_removed_type_and_resolution_fields_of_.py
backend/migrations/contexts/catalog/: env.py
backend/migrations/contexts/catalog/versions/: 7e75173a3f33_initial_alembic.py
backend/migrations/versions/: 4c3998b1c8d3_initial.py
backend/src/apps/backoffice/api/v0/: exception.py  main.py  setup_rabbitmq.py
backend/src/apps/backoffice/scripts/: rabbitmq_setup.py  run_rabbitmq_setup.py
backend/src/apps/catalog/api/v0/: exception.py  main.py
backend/src/apps/catalog/scripts/: __init__.py  rabbitmq_setup.py  run_rabbitmq_setup.py
backend/src/apps/shared/api/v0/: controller.py
backend/src/backoffice/contexts/shared/: __init__.py
backend/src/backoffice/contexts/shared/domain/: aggregate_root.py  entity.py  video_link.py
backend/src/contexts/backoffice/media/application/: media_creator.py  media_eliminator.py  media_finder.py  media_searcher.py  media_updater.py  movie_updater.py
backend/src/contexts/backoffice/media/domain/: __init__.py  media.py  media_events.py  media_repository.py
backend/src/contexts/backoffice/movies/application/: movie_creator.py  movie_eliminator.py  movie_finder.py  movie_searcher.py  movie_updater.py
backend/src/contexts/backoffice/movies/domain/: __init__.py  movie.py  movie_events.py  movie_repository.py
backend/src/contexts/backoffice/series/domain/: __init__.py  serie.py  serie_episode.py  serie_events.py  serie_repository.py  serie_season.py
backend/src/contexts/catalog/media/domain/: __init__.py  media.py  media_events.py  media_exceptions.py  media_repository.py
backend/src/contexts/catalog/movies/domain/: __init__.py  movie.py  movie_events.py  movie_exceptions.py  movie_repository.py
backend/src/contexts/catalog/series/domain/: __init__.py  serie.py  serie_episode.py  serie_events.py  serie_exceptions.py  serie_repository.py  serie_season.py
backend/src/contexts/shared/domain/: __init__.py  aggregate_root.py  domain_event.py  domain_event_subscriber.py  entity.py  entity_id.py  exception.py  file.py  image.py
backend/src/contexts/shared/domain/command_bus/: command_bus.py  command_handler.py
backend/src/contexts/shared/domain/criteria/: __init__.py  condition.py  condition_field.py  condition_operator.py  condition_value.py  criteria.py  filter.py  page_number.py  page_size.py  sort.py  sort_direction.py  sort_field.py
backend/src/contexts/shared/domain/event_bus/: event_bus.py
backend/src/contexts/shared/domain/query_bus/: query_bus.py  query_handler.py
backend/src/contexts/shared/infrastructure/command_bus/: in_memory_command_bus.py
backend/src/contexts/shared/infrastructure/criteria/: criteria_to_sqlalchemy_query.py
backend/src/contexts/shared/infrastructure/event_bus/: rabbitmq_configurer.py  rabbitmq_consumer.py  rabbitmq_event_bus.py  rabbitmq_event_configurer.py  rabbitmq_event_consumer.py  rabbitmq_event_setup.py  rabbitmq_exchange_formatter.py  rabbitmq_queue_formatter.py
backend/src/contexts/shared/infrastructure/file_manager/: file_manager.py
backend/src/contexts/shared/infrastructure/logger/: config.py  logger.py
backend/src/contexts/shared/infrastructure/query_bus/: in_memory_query_bus.py
backend/src/contexts/shared/infrastructure/rabbitmq/: __init__.py  rabbitmq_config.py  rabbitmq_connection.py  rabbitmq_manager.py
backend/tests/: conftest.py
backend/tests/apps/: index.html
backend/tests/contexts/backoffice/: conftest.py
backend/tests/contexts/backoffice/media/factory/: media_factory.py
backend/tests/contexts/backoffice/movies/application/: test_creator.py  test_eliminator.py  test_finder.py  test_searcher.py  test_updater.py
backend/tests/contexts/backoffice/movies/factory/: movie_factory.py
backend/tests/contexts/backoffice/series/factory/: serie_episode_factory.py  serie_factory.py  serie_season_factory.py
backend/tests/contexts/catalog/: conftest.py
backend/tests/contexts/catalog/media/factory/: media_factory.py
backend/tests/contexts/catalog/movies/factory/: movie_factory.py
backend/tests/contexts/catalog/series/factory/: serie_episode_factory.py  serie_factory.py  serie_season_factory.py
backend/tests/contexts/channel/channel/application/: test_creator.py  test_eliminator.py  test_finder.py  test_searcher.py  test_updater.py
backend/tests/contexts/channel/content/application/: test_creator.py  test_eliminator.py  test_finder.py  test_searcher.py  test_updater.py
backend/tests/contexts/content/movies/application/: test_creator.py  test_eliminator.py  test_finder.py  test_searcher.py  test_updater.py
backend/tests/contexts/shared/factory/: entity_id_factory.py  image_factory.py
backend/tests/utils/factories/channel/channel/: __init__.py  (+1 more)
backend/tests/utils/factories/shared/: entity_id_factory.py  image_factory.py
(+623 files in other folders)
