[project]
name = "media_platform_backend"
version = "0.1.0"
description = "Backend of the Media Platform"
authors = [
    { name = "Damian Ontivero", email = "damian.ontivero.dev@gmail.com" },
]
dependencies = [
    "aio-pika>=9.4.2",
    "alembic>=1.13.2",
    "cryptography>=43.0.0",
    "ditainer>=0.4.35",
    "fastapi<1.0.0,>=0.111.0",
    "moviepy>=1.0.3",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.32",
    "uvicorn>=0.30.5",
    "werkzeug>=3.0.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[[tool.pdm.source]]
name = "testpypi"
url = "https://test.pypi.org/simple"

[tool.pdm.dev-dependencies]
dev = ["pre-commit>=3.8.0"]
debug = ["ipdb>=0.13.13"]
format = ["ruff>=0.5.6"]
test = [
    "factory-boy>=3.3.0",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-mock>=3.14.0",
]

[tool.pdm.scripts]
# Format
"lint" = { cmd = "ruff check --fix" }
"format" = { cmd = "ruff format" }
# Backoffice
"bo:rabbitmq" = { call = "src.apps.backoffice.scripts.rabbitmq_setup:run" }
"bo:migrations" = { cmd = "alembic -n backoffice upgrade head" }
"bo:test" = { cmd = "pytest tests/contexts/backoffice -vs" }
"bo:api" = { cmd = "uvicorn src.apps.backoffice.api.v0.main:app --reload --port 8001" }
# Catalog
"ca:rabbitmq" = { call = "src.apps.catalog.scripts.rabbitmq_setup:run" }
"ca:migrations" = { cmd = "alembic -n catalog upgrade head" }
"ca:test" = { cmd = "pytest tests/contexts/catalog -vs" }
"ca:api" = { cmd = "uvicorn src.apps.catalog.api.v0.main:app --reload --port 8002" }


[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # isort
    "I",
]

[tool.ruff.lint.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
